2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-grid.c (hildon_grid_class_init): do not
	use accumulator for "popup-context-menu"

	NB#29888 / M#483


2006-06-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-window.c
	(hildon_window_toggle_menu): Changed the hide condition of the
	menu, now we are using GTK_WIDGET_MAPPED instead of
	GTK_WIDGET_VISIBLE, because the menu can be visible but not mapped
	in some situations, like the one described in this bug.

	NB#28836


2006-06-02  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-app.c (hildon_app_key_snooper): Add code
	to control if there is a combobox activated when the menu key is
	pressed and stop the menu drawing, this is a new case that happens
	when the application is avoiding the focus can go to the combobox.

	NB#26383 (bis)


2006-06-02  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c
	(hildon_time_editor_validate): removed the assinment of the
	error_widget, now just the highlight_callback can do it when it
	finished with it. Control that if we are already managing an error
	we don't start working in other.

	(hildon_time_editor_inserted_text): added a control to stop insert
	handle if we are already managing an error, we have also blocked
	the focusout event before que grab focus to avoid another
	validation of the field.

	NB#30955

	* hildon-widgets/hildon-time-editor.c
	(highlight_callback): Removed the return in the middle of the
	function, now that situation is imposible. It was causing the
	interlock.


2006-05-31  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-banner.c
	(HILDON_BANNER_LABEL_MAX_PROGRESS): increase even more 320 -> 375
	to satisfy NB#31099. (actually info and anim banners should have
	375 px width and only progress banners should have 265 px)

	NB#31099 (workaround)

2006-05-30  Luc Pionchon  <luc.pionchon@nokia.com>
